--- a/BNRG07/app/src/main/AndroidManifest.xml
+++ b/BNRG07/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                   android:parentActivityName=".CrimeListActivity">
         </activity>
         <provider
-            android:authorities="com.bnrg.bnrg07."
+            android:authorities="com.bnrg.bnrg07.criminalintent.fileprovider"
             android:name="android.support.v4.content.FileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
