--- a/PhotoGallery/app/build.gradle
+++ b/PhotoGallery/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.bnrg.nerdlauncher"
-        minSdkVersion 19
+        applicationId "com.bnrg.photogallery"
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
