--- a/PhotoGallery/app/src/main/AndroidManifest.xml
+++ b/PhotoGallery/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.bnrg.photogallery">
+    <permission android:name="com.bnrg.photogallery.PRIVATE"
+        android:protectionLevel="signature"/>
+    
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="com.bnrg.photogallery.PRIVATE"/>
 
     <application
         android:allowBackup="true"
@@ -23,6 +27,12 @@
         <receiver android:name=".StartupReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".NotificationReceiver"
+            android:exported="false">
+            <intent-filter android:priority="-999">
+                <action android:name="com.bnrg.photogallery.SHOW_NOTIFICATION"/>
             </intent-filter>
         </receiver>
     </application>
